# ChangeLog for sys-kernel/ppc-sources
# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ppc-sources/ChangeLog,v 1.25 2003/06/26 00:41:28 kain Exp $

  12 Jun 2003; <msterret@gentoo.org> ppc-sources-2.4.19-r3.ebuild,
  ppc-sources-2.4.19-r4.ebuild, ppc-sources-2.4.19-r5.ebuild,
  ppc-sources-2.4.19-r6.ebuild, ppc-sources-2.4.19.ebuild,
  ppc-sources-2.4.20-r1.ebuild:
  fix Header

*ppc-sources-2.4.21-r2 (25 Jun 2003)

  25 Jun 2003; Kain <kain@gentoo.org> ppc-sources-2.4.21-r2.ebuild:
  2.4.21 release update from benh bitkeeper 1.897. This may fix some bugs newest
  series powerbook users are having.

*ppc-sources-2.4.21-r1 (29 May 2003)

  29 May 2003; Kain <kainz@gentoo.org> ppc-sources-2.4.21-r1.ebuild:
  New kernel based off benh's bitkeeper tree from ~ May 27 (rev 1.893).
  This kernel also contains the orinoco monitor patch, and iptables.
  Next version should have bootsplash and ipsec/cryptoapi support.
  NOTE: For the moment, I don't have ipsec support in this kernel!

*ppc-sources-2.4.20-r4 (31 Mar 2003)

  31 Mar 2003; Kain <kain@gentoo.org> ppc-sources-2.4.20-r4.ebuild:
  New PPC kernel. Patches to various systems are the same versions as in -r3,
  except that we are now using the 2.4.20-ben9 kernel.

  11 Feb 2003; Bryon Roche <kain@kain.org> ppc-sources-2.4.20-r3.ebuild:
  New PPC kernel. Included patches are: ext2/3 xattr+ACL patch (upgraded to
  0.8.55),2.4.20-ben5,Super FreeS/WAN 1.99-p4, and a reversion of the dmasound
  code, which should fix some sound issues.  Also, this kernel has the
  orinoco-monitor mode patch, so kismet away!

*ppc-sources-2.4.20-r3 (11 Feb 2003)

  15 Mar 2003; Mark Guertin <gerk@gentoo.org> ppc-sources-2.4.20-r3.ebuild:
  set ppc in keywords

  10 Feb 2003; Olivier Reisch <doctomoe@gentoo.org> ppc-sources-2.4.20-r2.ebuild:
  Added missing SLOT to ebuild.

*ppc-sources-2.4.20-r2 (18 Dec 2002)
