@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ppc-sources/ppc-sources-2.4.19.ebuild,v 1.15 2003/09/07 07:26:01 msterret Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ppc-sources/ppc-sources-2.4.19.ebuild,v 1.16 2003/09/29 19:02:14 mholzer Exp $
 
 #OKV=original kernel version, KV=patched kernel version.  They can be the same.
 
@@ -24,7 +24,7 @@ ETYPE="sources"
 
 
 DESCRIPTION="Full sources for the Gentoo Linux PPC kernel"
-SRC_URI="http://www.kernel.org/pub/linux/kernel/v2.4/linux-${OKV}.tar.bz2 http://ftp.sunsite.dk/projects/gentooppc/distfiles/linux-gentoo-ppc-${KV}.patch.bz2"
+SRC_URI="mirror://kernel/linux/kernel/v2.4/linux-${OKV}.tar.bz2 http://ftp.sunsite.dk/projects/gentooppc/distfiles/linux-gentoo-ppc-${KV}.patch.bz2"
 PROVIDE="virtual/linux-sources"
 HOMEPAGE="http://www.kernel.org/ http://www.gentoo.org/"
 LICENSE="GPL-2"
