@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ppc-sources/ppc-sources-2.4.20-r2.ebuild,v 1.6 2003/07/22 20:00:32 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ppc-sources/ppc-sources-2.4.20-r2.ebuild,v 1.7 2003/09/29 19:02:14 mholzer Exp $
 
 IUSE="build crypt"
 
@@ -23,7 +23,7 @@ inherit kernel
 # to /usr/share/doc/gentoo-sources-${PV}/patches.txt.gz
 
 DESCRIPTION="Full sources for the Gentoo Linux kernel"
-SRC_URI="http://www.kernel.org/pub/linux/kernel/v2.4/linux-${OKV}.tar.bz2
+SRC_URI="mirror://kernel/linux/kernel/v2.4/linux-${OKV}.tar.bz2
 	 http://cvs.gentoo.org/~kain/ppc/patches-${KV}.tar.bz2"
 KEYWORDS="-x86 ppc -sparc -alpha"
 SLOT="${KV}"
