@@ -1,6 +1,6 @@
 # Copyright 1999-2003 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ppc-sources/ppc-sources-2.4.22-r1.ebuild,v 1.1 2003/09/17 10:29:32 trance Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ppc-sources/ppc-sources-2.4.22-r1.ebuild,v 1.2 2003/09/29 19:02:14 mholzer Exp $
 
 IUSE=""
 
@@ -12,7 +12,7 @@ inherit kernel
 MY_R=`echo $PR | sed "s:r:ben:g"`
 
 DESCRIPTION="PowerPC kernel tree based on benh's patches, -r corresponds to ben{r} versioning"
-SRC_URI="http://www.kernel.org/pub/linux/kernel/v2.4/linux-${OKV}.tar.bz2
+SRC_URI="mirror://kernel/linux/kernel/v2.4/linux-${OKV}.tar.bz2
 	 http://www.kernel.org/pub/linux/kernel/people/benh/patch-${OKV}-${MY_R}.bz2"
 HOMEPAGE="http://www.kernel.org/pub/linux/kernel/people/benh/"
 KEYWORDS="-x86 ~ppc -sparc -alpha"
