@@ -1,6 +1,17 @@
 # ChangeLog for sys-kernel/ppc-sources
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ppc-sources/ChangeLog,v 1.25 2003/06/26 00:41:28 kain Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/ppc-sources/ChangeLog,v 1.26 2003/09/29 19:02:14 mholzer Exp $
+
+*ppc-sources-2.4.22-r1 (29 Sep 2003)
+
+  29 Sep 2003; Martin Holzer <mholzer@gentoo.org>
+  ppc-sources-2.4.19-r3.ebuild, ppc-sources-2.4.19-r4.ebuild,
+  ppc-sources-2.4.19-r5.ebuild, ppc-sources-2.4.19-r6.ebuild,
+  ppc-sources-2.4.19.ebuild, ppc-sources-2.4.20-r1.ebuild,
+  ppc-sources-2.4.20-r2.ebuild, ppc-sources-2.4.20-r3.ebuild,
+  ppc-sources-2.4.20-r4.ebuild, ppc-sources-2.4.21-r1.ebuild,
+  ppc-sources-2.4.21-r2.ebuild, ppc-sources-2.4.22-r1.ebuild:
+  now uses mirror://kernel.
 
   12 Jun 2003; <msterret@gentoo.org> ppc-sources-2.4.19-r3.ebuild,
   ppc-sources-2.4.19-r4.ebuild, ppc-sources-2.4.19-r5.ebuild,
